force-app/main/default/objects/Post_Closing_Item__c/Post_Closing_Item__c.object-meta.xml
<CustomObject>
    <label>Post Closing Item</label>
    <nameField>
        <label>Post Closing Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Closing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>