force-app/main/default/objects/Post_Closing_Item__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance</label>
    <referenceTo>Advance__c</referenceTo>
    <relationshipLabel>Post Closing Items</relationshipLabel>
    <relationshipName>Post_Closing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>