force-app/main/default/objects/Post_Closing_Item__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Entity</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Post Closing Items</relationshipLabel>
    <relationshipName>Post_Closing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>