force-app/main/default/objects/Post_Closing_Item__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County this Deal Document applies to</description>
    <label>County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>