force-app/main/default/objects/Post_Closing_Item__c/fields/Deal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Contact</label>
    <referenceTo>Deal_Contact__c</referenceTo>
    <relationshipLabel>Post Closing Items</relationshipLabel>
    <relationshipName>Post_Closing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>