force-app/main/default/objects/Post_Closing_Item__c/fields/Deal_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Loan_Number__c</fullName>
    <formula>Post_Closing_Section__r.Post_Closing__r.Deal__r.Deal_Loan_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Loan Number</label>
    <type>Text</type>
</CustomField>