force-app/main/default/objects/Post_Closing_Item__c/fields/Post_Closer__c.field-meta.xml
<CustomField>
    <fullName>Post_Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Post Closing User Assigned to this Item</description>
    <inlineHelpText>The Post Closing User Assigned to this Item</inlineHelpText>
    <label>Post Closer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Post_Closing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>