force-app/main/default/objects/Post_Closing_Item__c/fields/Post_Closing_Section__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing_Section__c</fullName>
    <label>Post Closing Section</label>
    <referenceTo>Post_Closing_Section__c</referenceTo>
    <relationshipLabel>Post Closing Items</relationshipLabel>
    <relationshipName>Post_Closing_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>