force-app/main/default/objects/Post_Closing_Item__c/fields/Recorded__c.field-meta.xml
<CustomField>
    <fullName>Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Document has been recorded</description>
    <inlineHelpText>Indicates that this Document has been recorded</inlineHelpText>
    <label>Recorded</label>
    <type>Checkbox</type>
</CustomField>