force-app/main/default/objects/Post_Closing_Item__c/fields/Recorded_Document__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Document is recorded</description>
    <inlineHelpText>Indicates that this Document is recorded</inlineHelpText>
    <label>Recorded Document</label>
    <type>Checkbox</type>
</CustomField>