force-app/main/default/objects/Post_Closing_Item__c/fields/Recording_Status__c.field-meta.xml
<CustomField>
    <fullName>Recording_Status__c</fullName>
    <label>Recording Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Recorded</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>