force-app/main/default/objects/Post_Closing_Item__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <label>Sort</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>