force-app/main/default/objects/Post_Closing_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow-Up</fullName>
                <default>true</default>
                <label>Follow-Up</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Pending Revision</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Sent to Custodian</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>