force-app/main/default/objects/Post_Closing_Item__c/fields/Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Document Type has been uploaded</description>
    <label>Uploaded</label>
    <type>Checkbox</type>
</CustomField>